# DuctyWork

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
lib/: string_util.cpp  string_util.h  string_utils.h
process/: process.cpp  process.h  process_manager.cpp  process_manager.h  process_manager_macosx.cpp  process_manager_unix.cpp  process_manager_win32.cpp
tests/: process_manager.cpp
tests/process_manager/: macosx.cpp  unix.cpp  win32.cpp
windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
